--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -21,6 +21,7 @@
                 th:each="item:${T(com.techacademy.entity.User.Gender).values()}"
                 th:value="${item}" th:text="${item}" th:selected="*{gender}==${item}">
         </select>
+        <span th:errors="*{gender}" class="err"></span>
         <br>
 
         <label for="age">年齢</label>
